--- a/common-gwt/src/main/resources/org/geomajas/sld/editor/client/i18n/SldEditorMessages.properties
+++ b/common-gwt/src/main/resources/org/geomajas/sld/editor/client/i18n/SldEditorMessages.properties
@@ -9,8 +9,8 @@
 # details, see LICENSE.txt in the project root.
 #
 
-# activeLayer=Couche&nbsp;active&nbsp;:&nbsp;{0}
-externalGraphicsSelectTitle=Externe figuur
+
+externalGraphicsSelectTitle=Externe afbeelding
 markerSelectTitle=Marker
 confirmSavingChangesBeforeUnloadingSld=Wenst u uw wijzigingen aan de huidige SLD eerst te bewaren alvorens (eventueel) een nieuwe SLD in te laden? Zo ja, druk dan op <b>OK</b>.<br/>Druk op <b>Annuleren</b> om verder te werken met de huidige SLD.
 confirmSavingChangesBeforeUnloadingIncompleteSld=U hebt de huidige SLD gewijzigd, maar nog niet afgewerkt (minstens 1 onvolledig filter).<br/>Wenst u eerst die SLD af te werken, druk dan <b>OK</b>.<br/> Indien u op <b>Annuleren</b> drukt, zijn uw wijzigingen verloren.
@@ -20,9 +20,73 @@ geometryTitle=Geometrie-type
 styleTitle=Stijl
 hRefTitle=Href
 
+generalFormTitle=Algemeen
+ruleOverviewGroupTitle=Stijlen Overzicht
+ruleDetailContainerTitle=Stijl in detail
+
+confirmDeleteOfStyle=Bent u zeker dat u de stijl <b>{0}</b> wilt verwijderen?
+
 symbologyTabTitle=Symbologie
 filterTabTitle=Filter
 
 typeofGraphicsTitleInSymbologyTab=Type
-nameOfSymbolTitleInSymbologyTab=Naam
-formatTitleInPointSymbologyTab=Formaat
+nameOfSymbolTitleInSymbologyTab=Symbool
+formatTitleInPointInSymbologyTab=Formaat
+
+enableBorderInSymbologyTab=Omranding activeren
+enableFillInSymbologyTab=Opvulling activeren
+opacityTitleInSymbologyTab=Opaciteit (%)
+opacityTooltipInSymbologyTab=Vul een opaciteit in tussen 0 en 100%
+
+fillColorInSymbologyTab=Kleur
+borderColor=Kleur van rand
+strokeColorTitle=Lijnkleur
+borderWidthTitle=Dikte van rand (px)
+borderWidthTooltip=Vul een dikte in tussen 0 en 100 (pixels)
+
+sizeOfGraphicInSymbologyTab=Grootte (px)
+rotationOfGraphicInSymbologyTab=Rotatie
+rotationOfGraphicTooltipInSymbologyTab=Vul een waarde in tussen -360 en +360 (graden)
+
+triangleTitle=driehoek
+# TODO: other symbols
+
+nameUnspecified={Niet gespecifieerd}
+
+
+# Filter editor messages
+warnMessageUnsupportedOperator=De gebruikte operator <b>{0}</b> wordt niet ondersteund
+likeFilterSpecTemplate=<table style='font-size:11px;' border='1' cellpadding='10px'><tr><td>Willekeurige reeks tekens (wildcard):</td><td> {0} </td></tr><tr><td>E&eacute;n Willekeurig karakter:</td> <td> {1} </td></tr><tr><td>Escape-karakter</td><td> {2} </td></tr></table>
+
+# Rule overview pane
+ruleTitleFieldTitle=Titel
+ruleTitleUnspecified=zonder titel
+emptyRuleList=Nog geen regels aanwezig...
+
+# SLD level Buttons
+
+
+closeButtonTitle=Sluit af
+closeButtonTooltip=Sluit de sessie voor de huidige SLD af
+cancelButtonTitle=Annuleer
+saveButtonTitle=Bewaar SLD
+saveButtonTooltip=Bewaar uw wijzigingen aan de huidige SLD
+
+listingOfSldsTitle=Beschikbare SLD&#39;s
+listingOfSldsTooltip=Klik op een SLD om deze te bekijken of the wijzigen
+addSldButtonTooltip=Voeg nieuwe SLD toe
+
+nameSld=Naam SLD
+nameSldCanNotBeEmpty=De naam van de SLD mag niet leeg zijn
+
+createButtonTitle=Voeg toe
+createButtonTooltip=Cre&euml;er de SLD en voeg ze aan de lijst toe
+createSldCancelButtonTitle=Annuleer de creatie van een nieuwe SLD
+removeSldButtonTooltip=Verwijder geselecteerde SLD
+
+pointTitle=Punt
+lineTitle=Lijn
+polygonTitle=Polygoon
+
+
+
